# global-components

./: global-components.cmake
components/SerialServer/: CMakeLists.txt
components/TimeServer/: CMakeLists.txt
plat_components/tx2/BPMPServer/: CMakeLists.txt
